kubernetes/main-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: main-app
  name: main-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: development
            - name: SONIC_GRPC_LB_ENDPOINT
              value: sonic-server:50051
          image: nieltran/main-app:v1.0
          imagePullPolicy: Always
          name: main-app
          ports:
            - containerPort: 3030
---
apiVersion: v1
kind: Service
metadata:
  name: main-app
  annotations:
    nginx-lb.kubernetes.io/external-lb: "ingress-only"
    nginx-lb.kubernetes.io/backend-protocol: "HTTP"
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
  - protocol: TCP
    port: 80 # The port to expose internally
    targetPort: 3030 # The port main-app is listening on inside the container
    name: http
