kubernetes/sonic-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonic-server
  name: sonic-server-service
spec:
  type: LoadBalancer
  ports:
    - name: "sonic-grpc"
      port: 50051 # Service port, can be different from targetPort
      targetPort: 50051 # Port to sonic-server container
  selector:
    app: sonic-server
