kubernetes/sonic-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonic-server
  name: sonic-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sonic-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonic-server
    spec:
      containers:
        - env:
            - name: GRPC_PORT
              value: "50051"
            - name: MONGO_URI
              valueFrom:
                secretKeyRef:
                  name: sonic-server-secret
                  key: mongo-uri
            - name: DB_NAME
              value: "web-shopping"
            - name: NODE_ID
              value: sonic_node_1
            - name: SONIC_AUTH
              valueFrom:
                secretKeyRef:
                  name: sonic-server-secret
                  key: sonic-auth
            - name: SONIC_HOST
              value: localhost # Because the sonic-engine is running in the same pod
            - name: SONIC_PORT
              value: "1491"
          image: nieltran/sonic-server:v1.0
          imagePullPolicy: Always
          name: sonic-server
          ports:
            - containerPort: 50051
          volumeMounts:
            - mountPath: /etc/sonic.cfg
              name: sonic-server-config # Updated ConfigMap volume name
              subPath: sonic.cfg # Match the key in the ConfigMap
      volumes:
        - configMap:
            items:
              - key: sonic.cfg # Updated key
                path: sonic.cfg
            name: sonic-server-config # Updated ConfigMap name
          name: sonic-server-config # Updated ConfigMap volume name
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonic-server
  name: sonic-server
spec:
  type: ClusterIP
  ports:
    - name: "sonic-grpc"
      port: 50051 # Service port, can be different from targetPort
      targetPort: 50051 # Port to sonic-server container
      protocol: TCP
  selector:
    app: sonic-server
